# python-skia

./: .gitignore  Cargo.toml  README.md  pyproject.toml  skia.example.toml
crates/skia-recorder/: Cargo.toml
crates/skia-recorder/src/: backend.rs  export.rs  lib.rs  main.rs  portal.rs  runtime.rs  segment.rs
crates/skia-recorder/tests/: backend_smoke.rs  ffmpeg_smoke.rs
skia/: config.py  control_socket.py  main.py  recorder_client.py  save.py
tests/: test_config.py  test_recorder_client.py
