[package]
name = "skia-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.13.10", default-features = false, features = ["screencast", "tokio"] }
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
